[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/song_selectionMenu/Rankings.png" type="Texture" id=1]
[ext_resource path="res://sprites/song_selectionMenu/SongImages/World1/song1.png" type="Texture" id=2]
[ext_resource path="res://sprites/song_selectionMenu/NoDeaths.png" type="Texture" id=3]
[ext_resource path="res://sprites/song_selectionMenu/SongImages/World1/spr_world1Songs.png" type="Texture" id=4]
[ext_resource path="res://Scenes/MenuSongItem.gd" type="Script" id=5]

[node name="SongItem" type="Node2D"]
position = Vector2( 496, 248 )
script = ExtResource( 5 )

[node name="BackgroundImage" type="Sprite" parent="."]
position = Vector2( 288, -144 )
texture = ExtResource( 4 )

[node name="SongName" type="Sprite" parent="BackgroundImage"]
position = Vector2( -64, 0 )
texture = ExtResource( 2 )

[node name="Ranking" type="Sprite" parent="BackgroundImage"]
position = Vector2( 144, 0 )
texture = ExtResource( 1 )
hframes = 7

[node name="NoDeathRanking" type="Sprite" parent="BackgroundImage"]
position = Vector2( 96, 0 )
texture = ExtResource( 3 )
